--- a/frontend/src/styles/components/Navigation.module.scss
+++ b/frontend/src/styles/components/Navigation.module.scss
@@ -1,5 +1,8 @@
+@use "variables" as v;
+
 .lists {
   display: flex;
+  background-color: v.$primaryColor;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -8,16 +11,29 @@
     text-align: center;
   }
 }
+.link {
+  color: white;
+  font-size: 1rem * 1.8;
+  background-color: v.$primaryColor;
+  text-decoration: none;
+
+  &:hover {
+    color: v.$primaryColor;
+    background-color: white;
+  }
+}
 
 @media (min-width: 700px) {
-  .navigation {
-    width: 20%;
-    min-width: 250px;
-    position: unset;
-    display: flex;
-    flex-direction: column;
-  }
   .lists {
+    margin: 0;
     display: block;
+  }
+  .li {
+    display: block;
+    width: 250px;
+  }
+  .link {
+    display: block;
+    width: 250px;
   }
 }
