--- a/frontend/src/styles/layouts/top.module.scss
+++ b/frontend/src/styles/layouts/top.module.scss
@@ -1,3 +1,6 @@
+@use "variables" as v;
+// @use "sass:math";
+
 .container {
   display: flex;
   flex-direction: column;
@@ -21,5 +24,8 @@
     position: unset;
     display: flex;
     flex-direction: column;
+    border-right: solid 1px;
+    border-right-color: v.$primaryColor;
+    background-color: mix(white, v.$primaryColor, 85);
   }
 }
