--- a/frontend/src/styles/components/MainSection.module.scss
+++ b/frontend/src/styles/components/MainSection.module.scss
@@ -1,11 +1,4 @@
 .main {
-  width: 100%;
   flex: 1;
-}
-
-@media (min-width: 700px) {
-  .main {
-    width: 100%;
-    flex: 1;
-  }
+  overflow: scroll;
 }
