--- a/frontend/src/styles/layouts/top.module.scss
+++ b/frontend/src/styles/layouts/top.module.scss
@@ -4,17 +4,16 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 1500px;
+  overflow: hidden;
+  height: 100vh;
 }
 .navigation {
-  position: fixed;
-  bottom: 0;
   width: 100%;
 }
 
 @media (min-width: 700px) {
   .container {
-    flex-direction: row;
+    flex-direction: row-reverse;
     height: 0;
     min-height: 100vh;
   }
