DONE: Nested li into list

--- a/frontend/src/styles/components/Navigation.module.scss
+++ b/frontend/src/styles/components/Navigation.module.scss
@@ -25,7 +25,9 @@
 
 @media (min-width: 700px) {
   .lists {
-    display: block;
+    flex-direction: column;
+    .li {
+    }
   }
   .link {
     display: block;
