DONE: Created a mq function which makes managing media query easier

--- a/frontend/src/styles/layouts/login.module.scss
+++ b/frontend/src/styles/layouts/login.module.scss
@@ -1,6 +1,7 @@
 @use "variables" as v;
+@use "utils" as u;
 
-@media (min-width: 700px) {
+@include u.mq(large) {
   .container {
     display: flex;
     flex-direction: column;
