--- a/frontend/src/styles/components/Navigation.module.scss
+++ b/frontend/src/styles/components/Navigation.module.scss
@@ -1,4 +1,5 @@
 @use "variables" as v;
+@use "utils" as u;
 
 .lists {
   display: flex;
@@ -9,6 +10,11 @@
   .li {
     flex: 1;
     text-align: center;
+  }
+  @include u.mq(large) {
+    flex-direction: column;
+    .li {
+    }
   }
 }
 .link {
@@ -21,15 +27,7 @@
     color: v.$primaryColor;
     background-color: white;
   }
-}
-
-@media (min-width: 700px) {
-  .lists {
-    flex-direction: column;
-    .li {
-    }
-  }
-  .link {
+  @include u.mq(large) {
     display: block;
   }
 }
