--- a/frontend/src/styles/components/Navigation.module.scss
+++ b/frontend/src/styles/components/Navigation.module.scss
@@ -1,8 +1,8 @@
-@use "variables" as v;
+@use "variables";
 
 .lists {
   display: flex;
-  background-color: v.$primaryColor;
+  background-color: variables.$primaryColor;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -14,11 +14,11 @@
 .link {
   color: white;
   font-size: 1rem * 1.8;
-  background-color: v.$primaryColor;
+  background-color: variables.$primaryColor;
   text-decoration: none;
 
   &:hover {
-    color: v.$primaryColor;
+    color: variables.$primaryColor;
     background-color: white;
   }
 }
