DONE: Finished up usePagination.ts

--- a/frontend/src/styles/components/Pagination.module.scss
+++ b/frontend/src/styles/components/Pagination.module.scss
@@ -1,19 +1,22 @@
-.pagination {
-  display: inline-block;
+.paginationBar {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
 }
+.paginationItem {
+  padding: 0 12px;
+  height: 32px;
+  text-align: center;
+  align-items: center;
+  margin: 0 4px;
+  display: flex;
 
-.pagination a {
-  color: black;
-  float: left;
-  padding: 8px 16px;
-  text-decoration: none;
-}
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.04);
+    cursor: pointer;
+  }
 
-.pagination a.active {
-  background-color: #4caf50;
-  color: white;
-}
-
-.pagination a:hover:not(.active) {
-  background-color: #ddd;
+  &.selected {
+    background-color: rgba(0, 0, 0, 0.08);
+  }
 }
